Mon Mar  3 20:14:05 2003  Joern Thyssen  <jth@gnubg.org>

	Rename fNackgammon into a enum bgvariation
	(preparing for interesting bg variations :-))

	* gnubg.c (InitBoard): handle bg variations
	* gnubg.c (SaveSettings): save new enum. 
	* gnubg.c, show.c, set.c: new commands "set variation xxx" and
	"show variation".

Mon Mar  3 20:06:22 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: update some colors and CSS styles.

Mon Mar 3 18:54:15 GMT Jim Segrave <jes@jes-2.demon.nl>

	* renderprefs.c, gnubg.c - conditionals to allow a build
	  after configure --without-gtk --without-gtk2 --without-x

Sun Mar  2 16:31:31 2003  Joern Thyssen  <jth@gnubg.org>

	New function: TextToClipboard. Copies a given string to
	the clipboard (works for both wintendo and *nix).

	* gnubg.c (TextToClipboard): new function.
	* gtkgame.c (GTKTextToClipboard): new function.
	* gtkgame.c (InitGTK): add pwMain as target for primary selections.
	* html.c (CommandExportPositionGammOnLine): put html on clipboard.

Sun Mar  2 16:02:51 2003  Joern Thyssen  <jth@gnubg.org>

	Rename .gnubgpr to .gnubg/gnubgpr

	* gnubg.c (Movegnubgpr): new function.
	* record.c: new name for player's records file

Sun Mar  2 15:51:00 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add new board by JP White.

Sun Mar  2 15:28:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (RunGTK): force update of board
	(reported by several people)

Sun Mar  2 13:05:20 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c [ENABLE_TRAIN_MENU]: disable train menu, unless
	cpp flag ENABLE_TRAIN_MENU is defined.
	The menu confuses new users, that either want to train their
	own network or thinks it generates bearoff databases.

Sun Mar  2 12:51:52 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): fix bug that lead to wrong
	color of table header
	(reported by Michael Depreli)

Tue Feb 25 14:01:00 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c - fix stupid blunder preventing tutor mode from seeing