@@ -4031,8 +4031,12 @@ static GtkWidget *EvalWidget( evalcontext *pec, movefilter *pmf,
 
     gtk_container_add( GTK_CONTAINER( pw4 ), pew->pwReduced );
 
-    gtk_option_menu_set_history( GTK_OPTION_MENU( pew->pwReduced ), 
-                                 pec->nReduced );
+    /* UGLY fix for the fact the menu has entries only for values
+     * 0, 2, 3, 4 
+     */
+	gtk_option_menu_set_history( GTK_OPTION_MENU( pew->pwReduced ), 
+                                 (pec->nReduced < 2) ? 0 : 
+                                  pec->nReduced - 1 );
 
     /* cubeful */
     
